# PandaShell

./: README.md
Panda/: Cargo.toml  index.html  index.html.save  panda-demo.json
Panda/.history/: Cargo_20260618161153.toml  Cargo_20260618161220.toml  Cargo_20260618221751.toml  Cargo_20260620182427.toml
Panda/.history/src/: main_20260618021732.rs  main_20260618133917.rs  main_20260618134019.rs  main_20260618134205.rs  main_20260618134348.rs  main_20260618135029.rs  main_20260618135452.rs  main_20260618140307.rs  main_20260618221650.rs  main_20260620182727.rs
Panda/.history/src/commands/: calc_20260618015151.rs  calc_20260618133649.rs  calc_20260618222212.rs  calc_20260618222649.rs  calc_20260618222705.rs  calc_20260618223900.rs  calc_20260618223945.rs  calc_20260618224234.rs  calc_20260618224611.rs  forcequit_20260618154733.rs  forcequit_20260618155020.rs  formula_20260618223143.rs  help_20260618024630.rs  info_20260618013759.rs  info_20260619004647.rs  info_20260619004712.rs  logo_20260618154016.rs  mod_20260618154814.rs  mod_20260618221603.rs  mod_20260620182427.rs  sniff_20260620182417.rs  sniff_20260620182648.rs  sniff_20260620183833.rs  weather_20260618023823.rs  weather_20260618024003.rs  weather_20260618024205.rs  (+7 more)
Panda/src/: lib.rs  main.rs  parser.rs  shell.rs
Panda/src/commands/: app.rs  calc.rs  doctor.rs  envx.rs  findup.rs  forcequit.rs  formula.rs  gitinfo.rs  hash.rs  help.rs  info.rs  json.rs  logo.rs  mod.rs  pi.rs  qr.rs  restart.rs  serve.rs  size.rs  sniff.rs  spark.rs  timer.rs  todo.rs  tree.rs  url.rs  uuid.rs  watch.rs  weather.rs
(+100 files in other folders)
