[package]
name = "Panda"
version = "1.0.0"
edition = "2024"

[lib]
name = "panda"
path = "src/lib.rs"

[[bin]]
name = "Panda"
path = "src/main.rs"

[[bin]]
name = "PandaGui"
path = "src/bin/panda_gui.rs"

[dependencies]
rug = "1.26"
crossterm = "0.27"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
sha2 = "0.11.0"
pcap = "1.3"
qrcode = "0.14"
eframe = "0.33"
portable-pty = "0.9"
vt100 = "0.16"
